@@ -13,16 +13,20 @@ RUN cp /src/build/*-runner /work/application
 
 RUN chmod 775 /work /work/application
 
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
+#FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
+#WORKDIR /work/
+#COPY --from=build  /work/application /work/application
+
+# set up permissions for user `1001`
+#RUN chmod 775 /work /work/application \
+#  && chown -R 1001 /work \
+#  && chmod -R "g+rwX" /work \
+#  && chown -R 1001:root /work
+
+#USER 1001
+
+FROM scratch
 WORKDIR /work/
 COPY --from=build  /work/application /work/application
 
-# set up permissions for user `1001`
-RUN chmod 775 /work /work/application \
-  && chown -R 1001 /work \
-  && chmod -R "g+rwX" /work \
-  && chown -R 1001:root /work
-
-USER 1001
-
-CMD ["./application", "-XX:+PrintGC", "-XX:+PrintGCTimeStamps", "-XX:MaxHeapSize=128M", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["./application", "-Xmx100m", "-Xmn70m", "-Dquarkus.http.host=0.0.0.0"]
